--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
     <!-- header -->
     <header>
       <div class="container-fluid">
-        <div class="row">
+        <div class="row header-all">
           <div class="col-xs-12">
+            <div class="row header-navbar">
+              <div class="col-xs-12">
 
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -26,35 +30,47 @@
       <!-- sezione portfolio -->
       <section class="portfolio">
         <div class="container">
-          <div class="row">
+          <div class="row portfolio-h">
             <div class="col-xs-4 col-xs-offset-4">
 
             </div>
           </div>
 
-          <div class="row">
-            <div class="col-xs-12 col-sm-6 col-lg-4">
+          <div class="row portfolio-img">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-lg-4 padding-img">
+              <div class="img-house">
 
+              </div>
             </div>
 
-            <div class="col-xs-12 col-sm-6 col-lg-4">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-lg-4 padding-img">
+              <div class="img-cake">
 
+              </div>
             </div>
 
-            <div class="col-xs-12 col-sm-6 col-lg-4">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-lg-4 padding-img">
+              <div class="img-circus">
 
+              </div>
             </div>
 
-            <div class="col-xs-12 col-sm-6 col-lg-4">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-lg-4 padding-img">
+              <div class="img-controller">
 
+              </div>
             </div>
 
-            <div class="col-xs-12 col-sm-6 col-lg-4">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-lg-4 padding-img">
+              <div class="img-safe">
 
+              </div>
             </div>
 
-            <div class="col-xs-12 col-sm-6 col-lg-4">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-lg-4 padding-img">
+              <div class="img-submarine">
 
+              </div>
             </div>
 
 
@@ -66,9 +82,9 @@
       <!-- sezione about -->
       <section class="about">
         <div class="container-fluid">
-          <div class="row">
+          <div class="row about-all">
             <div class="col-xs-12">
-              
+
             </div>
 
           </div>
@@ -78,7 +94,7 @@
       <!-- sezione contact me -->
       <section class="contact-me">
         <div class="container">
-          <div class="row">
+          <div class="row contact-me-all">
             <div class="col-xs-8 col-xs-offset-2">
 
             </div>
@@ -91,11 +107,14 @@
     <!-- footer -->
     <footer>
       <div class="container-fluid">
-        <div class="row">
-          <div class="col-xs-12">
+        <div class="row footer-all">
+          <div class="col-xs-12 footer-up">
 
           </div>
 
+          <div class="col-xs-12 footer-down">
+
+          </div>
         </div>
 
       </div>
