--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <script src="https://kit.fontawesome.com/8f6a19e8ac.js" crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <title></title>
   </head>
   <body>
@@ -13,13 +16,31 @@
     <!-- header -->
     <header>
       <div class="container-fluid">
-        <div class="row header-all">
+        <div class="row">
           <div class="col-xs-12">
-            <div class="row header-navbar">
-              <div class="col-xs-12">
+            <nav class="navbar navbar-default">
+						  <div class="container-fluid">
+						    <!-- Brand and toggle get grouped for better mobile display -->
+						    <div class="navbar-header">
+						      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						        <span class="sr-only">Toggle navigation</span>
+						        <span class="icon-bar"></span>
+						        <span class="icon-bar"></span>
+						        <span class="icon-bar"></span>
+						      </button>
+						      <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+						    </div>
 
-              </div>
-            </div>
+						    <!-- Collect the nav links, forms, and other content for toggling -->
+						    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+						      <ul class="nav navbar-nav navbar-right">
+						        <li><a href="#">PORTFOLIO</a></li>
+						        <li><a href="#">ABOUT</a></li>
+										<li><a href="#">CONTACT</a></li>
+						      </ul>
+						    </div><!-- /.navbar-collapse -->
+						  </div><!-- /.container-fluid -->
+						</nav>
           </div>
         </div>
       </div>
@@ -27,50 +48,84 @@
 
     <!-- main -->
     <main>
-      <!-- sezione portfolio -->
-      <section class="portfolio">
-        <div class="container">
-          <div class="row portfolio-h">
-            <div class="col-xs-4 col-xs-offset-4">
 
+      <!-- sezione jumbo -->
+      <section id="jumbo">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="row">
+                <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 text-center">
+                  <img src="img\avataaars.svg" alt="">
+                  <h1>START BOOTSTRAP</h1>
+                  <div class="row divider-star">
+                    <div class="col-xs-2 col-xs-offset-3 line">
+
+                    </div>
+
+                    <div class="col-xs-2">
+                      <i class="fas fa-star"></i>
+                    </div>
+
+                    <div class="col-xs-2 line">
+
+                    </div>
+                  </div>
+                  <h4>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h4>
+                </div>
+              </div>
             </div>
           </div>
+        </div>
+      </section>
 
-          <div class="row portfolio-img">
-            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-lg-4 padding-img">
-              <div class="img-house">
+      <!-- sezione portfolio -->
+      <section id="portfolio">
+        <div class="container-fluid">
+          <div class="row portfolio-h">
+            <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 text-center">
+              <h2>PORTFOLIO</h2>
+              <div class="row divider-star">
+                <div class="col-xs-2 col-xs-offset-3 line">
 
+                </div>
+
+                <div class="col-xs-2">
+                  <i class="fas fa-star"></i>
+                </div>
+
+                <div class="col-xs-2 line">
+
+                </div>
               </div>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+
+          <div class="row portfolio-img text-center">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-lg-4 padding-img">
+              <img src="img/casa.png" alt="">
             </div>
 
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-lg-4 padding-img">
-              <div class="img-cake">
-
-              </div>
+              <img src="img/torta.png" alt="">
             </div>
 
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-lg-4 padding-img">
-              <div class="img-circus">
-
-              </div>
+              <img src="img/tenda.png" alt="">
             </div>
 
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-lg-4 padding-img">
-              <div class="img-controller">
-
-              </div>
+              <img src="img/game.png" alt="">
             </div>
 
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-lg-4 padding-img">
-              <div class="img-safe">
-
-              </div>
+              <img src="img/cassa.png" alt="">
             </div>
 
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-lg-4 padding-img">
-              <div class="img-submarine">
-
-              </div>
+              <img src="img/sub.png" alt="">
             </div>
 
 
@@ -80,7 +135,7 @@
       </section>
 
       <!-- sezione about -->
-      <section class="about">
+      <section id="about">
         <div class="container-fluid">
           <div class="row about-all">
             <div class="col-xs-12">
@@ -92,7 +147,7 @@
       </section>
 
       <!-- sezione contact me -->
-      <section class="contact-me">
+      <section id="contact-me">
         <div class="container">
           <div class="row contact-me-all">
             <div class="col-xs-8 col-xs-offset-2">
@@ -106,7 +161,7 @@
 
     <!-- footer -->
     <footer>
-      <div class="container-fluid">
+      <div id="container-fluid">
         <div class="row footer-all">
           <div class="col-xs-12 footer-up">
 
