--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             </div>
           </div>
         </div>
+
         <div class="container">
 
           <div class="row portfolio-img text-center">
@@ -127,8 +128,6 @@
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-lg-4 padding-img">
               <img src="img/sub.png" alt="">
             </div>
-
-
           </div>
 
         </div>
@@ -161,7 +160,7 @@
 
     <!-- footer -->
     <footer>
-      <div id="container-fluid">
+      <div class="container-fluid">
         <div class="row footer-all">
           <div class="col-xs-12 footer-up">
 
