aggiunto contenuto e stile sezione about e contact-me

--- a/index.html
+++ b/index.html
@@ -136,11 +136,35 @@
       <!-- sezione about -->
       <section id="about">
         <div class="container-fluid">
-          <div class="row about-all">
-            <div class="col-xs-12">
+          <div class="row">
+            <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 text-center title">
+              <h2>ABOUT</h2>
+              <div class="row divider-star">
+                <div class="col-xs-2 col-xs-offset-3 line">
 
+                </div>
+
+                <div class="col-xs-2">
+                  <i class="fas fa-star"></i>
+                </div>
+
+                <div class="col-xs-2 line">
+
+                </div>
+              </div>
             </div>
 
+            <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-2 about-text">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+            </div>
+
+            <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-0 about-text">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+            </div>
+
+            <div class="col-xs-12 text-center">
+              <button class="btn btn-default" type="submit"><i class="fas fa-download"></i> Download</button>
+            </div>
           </div>
         </div>
       </section>
@@ -150,7 +174,22 @@
         <div class="container">
           <div class="row contact-me-all">
             <div class="col-xs-8 col-xs-offset-2">
+              <form>
+									<div class="form-group">
+										<input type="text" class="form-control" placeholder="Name">
+									</div>
+								  <div class="form-group">
+								    <input type="email" class="form-control" placeholder="Email">
+								  </div>
+									<div class="form-group">
+										<input type="text" class="form-control" placeholder="Phone number">
+									</div>
+									<div class="form-group">
+										<textarea name="name" class="form-control" rows="8" cols="80" placeholder="Message"></textarea>
+									</div>
 
+								  <button type="submit" class="btn btn-default">Send</button>
+								</form>
             </div>
 
           </div>
