--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
               </div>
             </div>
 
-            <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-2 about-text">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+            <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-2 col-lg-3 col-lg-offset-3 about-text">
+              <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
             </div>
 
-            <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-0 about-text">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+            <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-0 col-lg-3 about-text">
+              <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
             </div>
 
             <div class="col-xs-12 text-center">
@@ -172,7 +172,25 @@
       <!-- sezione contact me -->
       <section id="contact-me">
         <div class="container">
-          <div class="row contact-me-all">
+          <div class="row">
+
+            <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 text-center title">
+              <h2>CONTACT ME</h2>
+              <div class="row divider-star">
+                <div class="col-xs-2 col-xs-offset-3 line">
+
+                </div>
+
+                <div class="col-xs-2">
+                  <i class="fas fa-star"></i>
+                </div>
+
+                <div class="col-xs-2 line">
+
+                </div>
+              </div>
+            </div>
+
             <div class="col-xs-8 col-xs-offset-2">
               <form>
 									<div class="form-group">
@@ -202,11 +220,44 @@
       <div class="container-fluid">
         <div class="row footer-all">
           <div class="col-xs-12 footer-up">
+            <div class="row">
 
+              <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 text-center">
+                <h3>LOCATION</h3>
+                <span>
+                  2215 John Daniel Drive Clark,<br>
+                  MO 54243
+                </span>
+              </div>
+
+              <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 text-center">
+                <h3>AROUND THE WEB</h3>
+                <div class="icons">
+                  <span><a href="#"><i class="fab fa-facebook-f"></i></a></span>
+                  <span><a href="#"><i class="fab fa-google-plus-g"></i></a></span>
+                  <span><a href="#"><i class="fab fa-twitter"></i></a></span>
+                  <span><a href="#"><i class="fab fa-invision"></i></a></span>
+                </div>
+              </div>
+
+              <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 text-center">
+                <h3>ABOUT FREELANCER</h3>
+                <span>
+                  Freelance is a free ot use, oper<br>
+                  source Bootstrap theme created<br>
+                  by <span class="green"><a href="#">Start Bootstrap</a></span>
+                </span>
+              </div>
+
+            </div>
           </div>
 
           <div class="col-xs-12 footer-down">
-
+            <div class="row">
+              <div class="col-xs-8 col-xs-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 text-center">
+                <span>Copyright &copy; Your Website 2019</span>
+              </div>
+            </div>
           </div>
         </div>
 
